# router/app.go
@@ -36,5 +36,8 @@ func Router() *gin.Engine {
 	//管理员私有方法
 	r.POST("/problem-create", middlewares.AuthAdmin(), service.ProblemCreate)
 
+	// 分页获取分类列表
+	r.GET("/category-list", middlewares.AuthAdmin(), service.GetCategoryList)
+
 	return r
 }
