# service/category.go
@@ -1,0 +1,51 @@
+package service
+
+import (
+	"GeekCoding/define"
+	"GeekCoding/models"
+	"log"
+	"net/http"
+	"strconv"
+
+	"github.com/gin-gonic/gin"
+)
+
+// GetCategoryList
+// @Tags         Admin Method
+// @Summary      Get Category List
+// @Param        Authorization header     string     true  "Authorization"
+// @Param        page  query     int     false  "page"
+// @Param        size  query     int     false  "size"
+// @Param        keyword  query     string     false  "keyword"
+// @Success      200   {string}    json "{"code":"200","msg","","data": ""}"
+// @Router       /category-list [get]
+func GetCategoryList(c *gin.Context) {
+	size, _ := strconv.Atoi(c.DefaultQuery("size", define.DefaultSize))
+	page, err := strconv.Atoi(c.DefaultQuery("page", define.DefaultPage))
+	if err != nil {
+		log.Println("GetCategoryList Page strconv Error:", err)
+		return
+	}
+	page = (page - 1) * size
+	var count int64
+	keyword := c.Query("keyword")
+
+	categoryList := make([]*models.CategoryBasic, 0)
+	err = models.DB.Model(new(models.CategoryBasic)).Where("name LIKE ?", "%"+keyword+"%").
+		Count(&count).Limit(size).Offset(page).Find(&categoryList).Error
+	if err != nil {
+		log.Println("GetCategoryList Error:", err)
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "get category list error: " + err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": map[string]interface{}{
+			"list":  categoryList,
+			"count": count,
+		},
+	})
+}
